# lidar-obstacle-detection

./: CMakeLists.txt  README.md
src/: box.h  color.h  common.h  environment.cpp  kdtree.h  processPointClouds.cpp  processPointClouds.h  processing.cpp  processing.h  ransac.cpp  ransac.h  ransac3d.cpp  ransac3d.h  render.cpp  render.h
src/render/: render.cpp
